# testSimplex

./: CMakeLists.txt  main.cpp  small.mps  small.problem
cmakeModules/: FindCLP.cmake
